2007-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use some improved tests for POSIX standard types
	available in Autoconf 2.61.
	Add support for configuring a magick_uintmax_t type.
	Added support for configuring a magick_uintptr_t type.

2007-12-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.h (MagickSafeMultiplySize_t): New function to
	perform a safe multiply.  A multiplication overflow results in
	zero.
	(MagickAllocateMemory): Check for size_t value truncation/overflow
	and zero size before deciding to allocate memory.  Any detected
	failure results in a NULL pointer being returned.
	(MagickReallocMemory): Add a type parameter to use in cast in
	order to avoid C++ portability problem.
	* PerlMagick/Magick.xs: Eliminate use of deprecated methods.
	* magick/memory.c (MagickAcquireMemory): New function to allocate
	memory.
	(MagickAcquireMemoryArray): New function to allocate memory for an
	array of objects.
	(MagickCloneMemory): New function to intelligently copy memory.
	(MagickReallocateMemory): New function to re-allocate memory.
	(MagickReleaseMemory): New function to deallocate memory.
	* magick/deprecate.c (AcquireMemory): Deprecated in favor of new
	function MagickAcquireMemory().
	(CloneMemory): Deprecated in favor of new function
	MagickCloneMemory().
	(LiberateMemory): Deprecated in favor of new function
	MagickReleaseMemory().
	(ReacquireMemory): Deprecated in favor of new function
	MagickReallocateMemory().

2007-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (ReadImage): Log colorspace of returned image.
	(WriteImage): Log colorspace of image to be written.
	* coders/{miff.c,mpc.c,tga.c,tiff.c}: Use MagickBoolToString().
	* magick/{constitute.c,xwindow.c}: Use MagickBoolToString().
	* magick/image.h (MagickBoolToString): New macro to convert truth
	value to a constant "True" or "False" string.

2007-11-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
